# face_detection_openCV

cpp_srcs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp_srcs/srcs/: do_not_sleep.cpp  facial_detection.cpp  facial_detection2.cpp  go_on_live.cpp  go_on_live_opt.cpp
python_srcs/: facial_detection.py  go_on_live.py
